--- a/desafios/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/desafios/exercicios/ex026/mq002/estilos/paisagem.css
@@ -2,3 +2,10 @@
 
 
 /* Aparelho deitado (modo landscape) */
+
+
+body{
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-position: center bottom;
+}
