--- a/desafios/exercicios/ex026/mq005/estilos/style.css
+++ b/desafios/exercicios/ex026/mq005/estilos/style.css
@@ -21,7 +21,7 @@ header > h1 {
 }
 
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
@@ -37,8 +37,23 @@ menu > ul > li > a {
     color: white;
     border-top: 2px solid gray;
 }
+
+span#burguer{
+    background-color: rgb(32, 31, 31);
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
 menu > ul > li > a:hover{
-    background-color: gray;
+    background-color: rgb(82, 77, 77);
+    display: block;
+    
+}
+
+span#burguer:hover{
+    background-color: white;
+    color: black;
 }
 
 main{
