--- a/desafios/exercicios/ex027/flex012-menu flexbox/style.css
+++ b/desafios/exercicios/ex027/flex012-menu flexbox/style.css
@@ -17,14 +17,41 @@ header{
     background-color: gray;
     color: white;
     padding: 10px;
+    
+    display: flex;   /* Flexbox */
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header > h1{   /* Meu site */
     border: 1px dotted black;   
+
+    flex: 0 0 200px;  /* FLEXBOX */
 }
 
 nav{   /* Opções */
     border: 1px dotted black;
+    
+    display: flex;  /* FLEXBOX */
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+}
+
+header > nav > a{  /* Opções 1, 2, 3, 4*/
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+}
+
+header > nav > a:hover{ /*qnd passar o mouse emcima das opções */
+    background-color: white;
+    color: black;
+    transition: background-color .5s;
 }
 main{
     background-color: white;
